--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
       <li><i class="fab fa-linkedin"></i></li>
       <li><i class="fab fa-github"></i></li>
       <li><i class="fas fa-envelope"></i></li>
-      <i class="far fa-paper-plane"></i>
     </ul>
   </div>
 
@@ -172,6 +171,32 @@
       <h5 class="technologies-used">Techonolgies Used:</h5>
       <p class="technologies">Python</p>
       <img class="project-thumb" src="images/murder.png" alt="how to get away with murder python game">
+    </div>
+  </div>
+
+  <div class="footer">
+    <form class="contact-form">
+      <h2 class="lets-connect">Lets Connect!</h2>
+      <label>Name*
+        <input type="text" id="name" name="name" placeholder="Please enter name" required>
+      </label>
+      <label>Email*
+        <input type="email" id="email" name="email" required>
+      </label>
+      <label>Message*
+        <textarea  id="message" name="message" required></textarea>
+      </label>
+      <button class="form-btn" type="submit"><i class="far fa-paper-plane"></i>Submit</button>
+    </form>
+
+    <a id="resume" class="resume" href="resume/Kurtis Garcia Resume.pdf" download>Download My Resume</a>
+
+    <div class="footer-social-nav">
+      <ul class="footer-social-list">
+        <li><i class="fab fa-linkedin"></i></li>
+        <li><i class="fab fa-github"></i></li>
+        <li><i class="fas fa-envelope"></i></li>
+      </ul>
     </div>
   </div>
 
