--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   </div>
   <div class="social-nav">
     <ul class="social-list">
-      <li><i class="fab fa-linkedin"></i></li>
-      <li><i class="fab fa-github"></i></li>
-      <li><i class="fas fa-envelope"></i></li>
+      <li><a href="https://www.linkedin.com/in/kurtis-garcia" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/kgarcia14" target="_blank"><i class="fab fa-github"></i></a></li>
+      <li><a href="mailto:kurtisgarcia14@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
     </ul>
   </div>
 
@@ -175,8 +175,11 @@
   </div>
 
   <div class="footer">
-    <form class="contact-form">
+    <form class="contact-form" method="POST" netlify-honeypot="bot-field" netlify>
       <h2 class="lets-connect">Lets Connect!</h2>
+      <p class="hidden">
+        <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+      </p>
       <label>Name*
         <input type="text" id="name" name="name" placeholder="Please enter name" required>
       </label>
@@ -193,9 +196,9 @@
 
     <div class="footer-social-nav">
       <ul class="footer-social-list">
-        <li><i class="fab fa-linkedin"></i></li>
-        <li><i class="fab fa-github"></i></li>
-        <li><i class="fas fa-envelope"></i></li>
+        <li><a href="https://www.linkedin.com/in/kurtis-garcia" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/kgarcia14" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="mailto:kurtisgarcia14@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
       </ul>
     </div>
   </div>
