--- a/index.html
+++ b/index.html
@@ -11,40 +11,41 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <div class="navbar-container">
-    <nav class="navbar navbar-expand-md navbar-light navbar-fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Kurtis Garcia</a>
-        <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu"
-        aria-expanded="false"
-        aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="toggleMobileMenu" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Kurtis Garcia</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Skills</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+  
+  <nav data-scroll-header class="navbar navbar-light navbar-expans-md fixed-top">
+    <div class="container-fluid">
+      <a href="#" class="navbar-brand">Kurtis Garcia</a>
+      <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">KG</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a href="#" class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">Home</a>
+            </li>
+            <li class="nav-item"><a href="#skills" class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">Contact</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
+
   <div class="social-nav">
     <ul class="social-list">
       <li><a href="https://www.linkedin.com/in/kurtis-garcia" target="_blank"><i class="fab fa-linkedin"></i></a></li>
@@ -63,7 +64,7 @@
     </div>
   </div>
 
-  <div class="skills-container">
+  <div id="skills" class="skills-container">
     <div class="skill-wrapper web-dev">
       <img class="skills-img" src="images/coding.svg" alt="code tag">
       <h3 class="skills-title">Web Development</h3>
@@ -136,7 +137,7 @@
     </div>
   </div>
 
-  <div class="projects-container">
+  <div id="projects" class="projects-container">
     <div class="project-wrapper">
       <h5 class="project-number">Project 1</h5>
       <h4 class="project-name">weatherSquad</h4>
@@ -174,14 +175,14 @@
     </div>
   </div>
 
-  <div class="footer">
+  <div id="contact" class="footer">
     <form class="contact-form" method="POST" netlify-honeypot="bot-field" netlify>
       <h2 class="lets-connect">Lets Connect!</h2>
       <p class="hidden">
         <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
       </p>
       <label>Name*
-        <input type="text" id="name" name="name" placeholder="Please enter name" required>
+        <input type="text" id="name" name="name" required>
       </label>
       <label>Email*
         <input type="email" id="email" name="email" required>
@@ -192,7 +193,7 @@
       <button class="form-btn" type="submit"><i class="far fa-paper-plane"></i>Submit</button>
     </form>
 
-    <a id="resume" class="resume" href="resume/Kurtis Garcia Resume.pdf" download>Download My Resume</a>
+    <a id="resume" class="resume" href="resume/Kurtis Garcia Resume.pdf" download>Download Resume</a>
 
     <div class="footer-social-nav">
       <ul class="footer-social-list">
@@ -206,5 +207,6 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
 <script src="index.js"></script>
 </html>
