mobile media queries done

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   
-  <nav data-scroll-header class="navbar navbar-light navbar-expans-md fixed-top">
+  <nav data-scroll-header class="navbar navbar-light navbar-expand-md fixed-top">
     <div class="container-fluid">
       <a href="#" class="navbar-brand">Kurtis Garcia</a>
       <button 
-      class="navbar-toggler" 
+      class="navbar-toggler custom-toggler" 
       type="button" 
       data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -162,7 +162,9 @@
       <p class="project-description">An app for dog owners to coordinate puppy play dates, and connect with people who have dogs</p>
       <h5 class="technologies-used">Techonolgies Used:</h5>
       <p class="technologies">React, Styled Components, Material UI, Bootstrap, Javascript, Express, PostgreSQL, ElephantSQL, Firebase, Auth0, Google API, </p>
-      <img class="project-thumb" src="images/puppyluv.png" alt="puppyluv">
+      <div class="img-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Es1cn46QIIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
 
     <div class="project-wrapper">
