testing media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">KG</h5>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -56,7 +55,7 @@
 
   <div class="hero">
     <div class="vector">
-      <img src="images/vector.svg" alt="illustration">
+      <img class="vector-img" src="images/vector.svg" alt="illustration">
     </div>
     <div class="hero-content">
       <h1>Transforming Beautiful Designs Into Clean Code</h1>
@@ -139,41 +138,55 @@
 
   <div id="projects" class="projects-container">
     <div class="project-wrapper">
-      <h5 class="project-number">Project 1</h5>
-      <h4 class="project-name">weatherSquad</h4>
-      <p class="project-description">A weather app that lets you search current weather conditions. You also get a quote reflecting your locations weather. In addition, if the weather is dreary, you are provied with a joke to cheer you up.</p>
-      <h5 class="technologies-used">Techonolgies Used:</h5>
-      <p class="technologies">JavaScript, HTML, and CSS</p>
-      <img class="project-thumb" src="images/weathersquad.png" alt="weathersquad">
+      <div class="project-content">
+        <h5 class="project-number">Project 1</h5>
+        <h4 class="project-name">weatherSquad</h4>
+        <p class="project-description">A weather app that lets you search current weather conditions. You also get a quote reflecting your locations weather. In addition, if the weather is dreary, you are provied with a joke to cheer you up.</p>
+        <h5 class="technologies-used">Techonolgies Used:</h5>
+        <p class="technologies">JavaScript, HTML, and CSS</p>
+      </div>
+      <div class="project-thumb-container">
+        <img class="project-thumb" src="images/weathersquad.png" alt="weathersquad">
+      </div>
     </div>
 
     <div class="project-wrapper">
-      <h5 class="project-number">Project 2</h5>
-      <h4 class="project-name">squadTube</h4>
-      <p class="project-description">Search for and watch your favorite videos using the Youtube API, bookmark favorite videos, tag videos based on the topic, search the local databases based on the tags. Includes authentication for login/logout.</p>
-      <h5 class="technologies-used">Techonolgies Used:</h5>
-      <p class="technologies">Node.js, Express, PostgreSQL, HTML, CSS, Express Template Engine, Express Session, Pg-promise, and bcrypt.</p>
-      <img class="project-thumb" src="images/squadtube.png" alt="squadtube">
+      <div class="project-content">
+        <h5 class="project-number">Project 2</h5>
+        <h4 class="project-name">squadTube</h4>
+        <p class="project-description">Search for and watch your favorite videos using the Youtube API, bookmark favorite videos, tag videos based on the topic, search the local databases based on the tags. Includes authentication for login/logout.</p>
+        <h5 class="technologies-used">Techonolgies Used:</h5>
+        <p class="technologies">Node.js, Express, PostgreSQL, HTML, CSS, Express Template Engine, Express Session, Pg-promise, and bcrypt.</p>
+      </div>
+      <div class="project-thumb-container">
+        <img class="project-thumb" src="images/squadtube.png" alt="squadtube">
+      </div>
     </div>
 
     <div class="project-wrapper">
-      <h5 class="project-number">Project 3</h5>
-      <h4 class="project-name">PuppyLuv</h4>
-      <p class="project-description">An app for dog owners to coordinate puppy play dates, and connect with people who have dogs</p>
-      <h5 class="technologies-used">Techonolgies Used:</h5>
-      <p class="technologies">React, Styled Components, Material UI, Bootstrap, Javascript, Express, PostgreSQL, ElephantSQL, Firebase, Auth0, Google API, </p>
-      <div class="img-container">
+      <div class="project-content">
+        <h5 class="project-number">Project 3</h5>
+        <h4 class="project-name">PuppyLuv</h4>
+        <p class="project-description">An app for dog owners to coordinate puppy play dates, and connect with people who have dogs</p>
+        <h5 class="technologies-used">Techonolgies Used:</h5>
+        <p class="technologies">React, Styled Components, Material UI, Bootstrap, Javascript, Express, PostgreSQL, ElephantSQL, Firebase, Auth0, Google API, </p>
+      </div>
+      <div class="project-thumb-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Es1cn46QIIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="project-wrapper">
-      <h5 class="project-number">Project 4</h5>
-      <h4 class="project-name">How To Get Away</h4>
-      <p class="project-description">Escape from the police in this python terminal game.</p>
-      <h5 class="technologies-used">Techonolgies Used:</h5>
-      <p class="technologies">Python</p>
-      <img class="project-thumb" src="images/murder.png" alt="how to get away with murder python game">
+      <div class="project-content">
+        <h5 class="project-number">Project 4</h5>
+        <h4 class="project-name">How To Get Away</h4>
+        <p class="project-description">Escape from the police in this python terminal game.</p>
+        <h5 class="technologies-used">Techonolgies Used:</h5>
+        <p class="technologies">Python</p>
+      </div>
+      <div class="project-thumb-container">
+        <img class="project-thumb" src="images/murder.png" alt="how to get away with murder python game">
+      </div>
     </div>
   </div>
 
@@ -195,14 +208,16 @@
       <button class="form-btn" type="submit"><i class="far fa-paper-plane"></i>Submit</button>
     </form>
 
-    <a id="resume" class="resume" href="resume/Kurtis Garcia Resume.pdf" download>Download Resume</a>
-
-    <div class="footer-social-nav">
-      <ul class="footer-social-list">
-        <li><a href="https://www.linkedin.com/in/kurtis-garcia" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="https://github.com/kgarcia14" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="mailto:kurtisgarcia14@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
-      </ul>
+    <div class="resume-and-social">
+      <a id="resume" class="resume" href="resume/Kurtis Garcia Resume.pdf" download>Download Resume</a>
+      
+      <div class="footer-social-nav">
+        <ul class="footer-social-list">
+          <li><a href="https://www.linkedin.com/in/kurtis-garcia" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://github.com/kgarcia14" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a href="mailto:kurtisgarcia14@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
