styled hero for screens bigger than 1024px

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <img class="vector-img" src="images/vector.svg" alt="illustration">
     </div>
     <div class="hero-content">
-      <h1>Transforming Beautiful Designs Into Clean Code</h1>
+      <h1>Transforming Beautiful Designs Into Clean Code.</h1>
       <button class="see-work-btn">See My Work</button>
     </div>
   </div>
