added urls to links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="hero-content">
       <h1>Transforming Beautiful Designs Into Clean Code.</h1>
-      <button class="see-work-btn">See My Work</button>
+      <button class="see-work-btn"><a href="#projects" class="btn-link">See My Work</a></button>
     </div>
   </div>
 
@@ -147,6 +147,10 @@
       </div>
       <div class="project-thumb-container">
         <img class="project-thumb" src="images/weathersquad.png" alt="weathersquad">
+        <div class="project-links-container">
+          <a href="https://weathersquad.netlify.app" target="_blank" class="project-links live-site">View Site</a>
+          <a href="https://github.com/kgarcia14/weathersquad" target="_blank" class="project-links github-code">View Code</a>
+        </div>
       </div>
     </div>
 
@@ -160,6 +164,10 @@
       </div>
       <div class="project-thumb-container">
         <img class="project-thumb" src="images/squadtube.png" alt="squadtube">
+        <div class="project-links-container">
+          <a href="https://squadtube.kurtisgarcia.dev" target="_blank" class="project-links live-site">View Site</a>
+          <a href="https://github.com/kgarcia14/squadtube" target="_blank" class="project-links github-code">View Code</a>
+        </div>
       </div>
     </div>
 
@@ -173,6 +181,9 @@
       </div>
       <div class="project-thumb-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Es1cn46QIIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="project-links-container">
+          <a href="https://github.com/kgarcia14/puppyluv_frontend" target="_blank" class="project-links github-code">View Code</a>
+        </div>
       </div>
     </div>
 
@@ -186,6 +197,9 @@
       </div>
       <div class="project-thumb-container">
         <img class="project-thumb" src="images/murder.png" alt="how to get away with murder python game">
+        <div class="project-links-container">
+          <a href="https://github.com/kgarcia14/the_keating_4" target="_blank" class="project-links github-code">View Code</a>
+        </div>
       </div>
     </div>
   </div>
