--- a/index.html
+++ b/index.html
@@ -140,6 +140,23 @@
     <div class="project-wrapper">
       <div class="project-content">
         <h5 class="project-number">Project 1</h5>
+        <h4 class="project-name">CocktailHour</h4>
+        <p class="project-description">An app for users to search for different cocktails within TheCocktailDB API database in addition to viewing the step by step recipe allowing the user the ability to create that cocktail on their own.</p>
+        <h5 class="technologies-used">Techonolgies Used:</h5>
+        <p class="technologies">React, React-Router, Styled Components, TheCocktailDB API, Axios, Material UI </p>
+      </div>
+      <div class="project-thumb-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sj60MN6x35Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="project-links-container">
+          <a href="https://cocktailhour.netlify.app" target="_blank" class="project-links live-site">View Site</a>
+          <a href="https://github.com/kgarcia14/cocktailhour" target="_blank" class="project-links github-code">View Code</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-wrapper">
+      <div class="project-content">
+        <h5 class="project-number">Project 2</h5>
         <h4 class="project-name">weatherSquad</h4>
         <p class="project-description">A weather app that lets you search current weather conditions. You also get a quote reflecting your locations weather. In addition, if the weather is dreary, you are provied with a joke to cheer you up.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
@@ -156,7 +173,7 @@
 
     <div class="project-wrapper">
       <div class="project-content">
-        <h5 class="project-number">Project 2</h5>
+        <h5 class="project-number">Project 3</h5>
         <h4 class="project-name">squadTube</h4>
         <p class="project-description">Search for and watch your favorite videos using the Youtube API, bookmark favorite videos, tag videos based on the topic, search the local databases based on the tags. Includes authentication for login/logout.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
@@ -173,7 +190,7 @@
 
     <div class="project-wrapper">
       <div class="project-content">
-        <h5 class="project-number">Project 3</h5>
+        <h5 class="project-number">Project 4</h5>
         <h4 class="project-name">PuppyLuv</h4>
         <p class="project-description">An app for dog owners to coordinate puppy play dates, and connect with people who have dogs</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
@@ -189,7 +206,7 @@
 
     <div class="project-wrapper">
       <div class="project-content">
-        <h5 class="project-number">Project 4</h5>
+        <h5 class="project-number">Project 5</h5>
         <h4 class="project-name">How To Get Away</h4>
         <p class="project-description">Escape from the police in this python terminal game.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
