--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 
   <div class="skills-icon-container">
-    <div class="skill-group">
+    <div class="skill-group icon-group1-animate">
       <div class="skill-icon">
         <label>Javascript</label>
         <i class="devicon-javascript-plain"></i>
@@ -108,7 +108,7 @@
         <i class="devicon-bulma-plain"></i>
       </div>
     </div>
-    <div class="skill-group">
+    <div class="skill-group icon-group2-animate">
       <div class="skill-icon">
         <label>Node.js</label>
         <i class="devicon-nodejs-plain"></i>
@@ -137,15 +137,15 @@
   </div>
 
   <div id="projects" class="projects-container">
-    <div class="project-wrapper">
-      <div class="project-content">
+    <div class="project-wrapper project1-animate">
+      <div class="project-content project1-content-animate">
         <h5 class="project-number">Project 1</h5>
         <h4 class="project-name">CocktailHour</h4>
         <p class="project-description">An app for users to search for different cocktails within TheCocktailDB API database in addition to viewing the step by step recipe allowing the user the ability to create that cocktail on their own.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">React, React-Router, Styled Components, TheCocktailDB API, Axios, Material UI </p>
       </div>
-      <div class="project-thumb-container">
+      <div class="project-thumb-container project1-thumb-animate">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/sj60MN6x35Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="project-links-container">
           <a href="https://cocktailhour.netlify.app" target="_blank" class="project-links live-site">View Site</a>
@@ -155,14 +155,14 @@
     </div>
 
     <div class="project-wrapper">
-      <div class="project-content">
+      <div class="project-content  project2-content-animate">
         <h5 class="project-number">Project 2</h5>
         <h4 class="project-name">weatherSquad</h4>
         <p class="project-description">A weather app that lets you search current weather conditions. You also get a quote reflecting your locations weather. In addition, if the weather is dreary, you are provied with a joke to cheer you up.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">JavaScript, HTML, and CSS</p>
       </div>
-      <div class="project-thumb-container">
+      <div class="project-thumb-container project2-thumb-animate">
         <img class="project-thumb" src="images/weathersquad.png" alt="weathersquad">
         <div class="project-links-container">
           <a href="https://weathersquad.netlify.app" target="_blank" class="project-links live-site">View Site</a>
@@ -172,14 +172,14 @@
     </div>
 
     <div class="project-wrapper">
-      <div class="project-content">
+      <div class="project-content  project3-content-animate">
         <h5 class="project-number">Project 3</h5>
         <h4 class="project-name">squadTube</h4>
         <p class="project-description">Search for and watch your favorite videos using the Youtube API, bookmark favorite videos, tag videos based on the topic, search the local databases based on the tags. Includes authentication for login/logout.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">Node.js, Express, PostgreSQL, HTML, CSS, Express Template Engine, Express Session, Pg-promise, and bcrypt.</p>
       </div>
-      <div class="project-thumb-container">
+      <div class="project-thumb-container project3-thumb-animate">
         <img class="project-thumb" src="images/squadtube.png" alt="squadtube">
         <div class="project-links-container">
           <a href="https://squadtube.kurtisgarcia.dev" target="_blank" class="project-links live-site">View Site</a>
@@ -189,14 +189,14 @@
     </div>
 
     <div class="project-wrapper">
-      <div class="project-content">
+      <div class="project-content project4-content-animate">
         <h5 class="project-number">Project 4</h5>
         <h4 class="project-name">PuppyLuv</h4>
         <p class="project-description">An app for dog owners to coordinate puppy play dates, and connect with people who have dogs</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">React, Styled Components, Material UI, Bootstrap, Javascript, Express, PostgreSQL, ElephantSQL, Firebase, Auth0, Google API, </p>
       </div>
-      <div class="project-thumb-container">
+      <div class="project-thumb-container project4-thumb-animate">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Es1cn46QIIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="project-links-container">
           <a href="https://github.com/kgarcia14/puppyluv_frontend" target="_blank" class="project-links github-code">View Code</a>
@@ -205,14 +205,14 @@
     </div>
 
     <div class="project-wrapper">
-      <div class="project-content">
+      <div class="project-content project5-content-animate">
         <h5 class="project-number">Project 5</h5>
         <h4 class="project-name">How To Get Away</h4>
         <p class="project-description">Escape from the police in this python terminal game.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">Python</p>
       </div>
-      <div class="project-thumb-container">
+      <div class="project-thumb-container project5-thumb-animate">
         <img class="project-thumb" src="images/murder.png" alt="how to get away with murder python game">
         <div class="project-links-container">
           <a href="https://github.com/kgarcia14/the_keating_4" target="_blank" class="project-links github-code">View Code</a>
