--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
   <div class="hero">
     <div class="vector">
-      <img class="vector-img" src="images/vector.svg" alt="illustration">
+      <img class="vector-img hero-animate" src="images/vector.svg" alt="illustration">
     </div>
     <div class="hero-content">
-      <h1>Transforming Beautiful Designs Into Clean Code.</h1>
-      <button class="see-work-btn"><a href="#projects" class="btn-link">See My Work</a></button>
+      <h1 class="hero-animate">Transforming Beautiful Designs Into Clean Code.</h1>
+      <button class="see-work-btn hero-animate"><a href="#projects" class="btn-link">See My Work</a></button>
     </div>
   </div>
 
@@ -137,7 +137,7 @@
   </div>
 
   <div id="projects" class="projects-container">
-    <div class="project-wrapper project1-animate">
+    <div class="project-wrapper">
       <div class="project-content project1-content-animate">
         <h5 class="project-number">Project 1</h5>
         <h4 class="project-name">CocktailHour</h4>
