--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -55,34 +56,58 @@
 
   <div class="hero">
     <div class="vector">
-      <img class="vector-img hero-animate" src="images/vector.svg" alt="illustration">
+      <img class="vector-img" src="images/vector.svg" alt="illustration">
     </div>
     <div class="hero-content">
-      <h1 class="hero-animate">Transforming Beautiful Designs Into Clean Code.</h1>
-      <button class="see-work-btn hero-animate"><a href="#projects" class="btn-link">See My Work</a></button>
+      <h1>Transforming Beautiful Designs Into Clean Code.</h1>
+      <button class="see-work-btn"><a href="#projects" class="btn-link">See My Work</a></button>
     </div>
   </div>
 
   <div id="skills" class="skills-container">
-    <div class="skill-wrapper web-dev">
+    <div 
+      class="skill-wrapper web-dev" 
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
       <img class="skills-img" src="images/coding.svg" alt="code tag">
       <h3 class="skills-title">Web Development</h3>
       <p class="skills-description">Well versed in modern day web development. I design and update websites and online applications using various technologies and design tools.</p>
     </div>
-    <div class="skill-wrapper res-des">
+    <div 
+      class="skill-wrapper res-des"
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
       <img class="skills-img" src="images//monitor-tablet-and-smartohone.svg" alt="computer,tablet, and phone">
       <h3 class="skills-title">Responsive design</h3>
       <p class="skills-description">Understanding the importance of responsive design this day in age, I make it a priority to ensure a seamless user experience in every project.</p>
     </div>
-    <div class="skill-wrapper customer-service">
+    <div 
+      class="skill-wrapper customer-service"
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
       <img class="skills-img" src="images/customer.svg" alt="code tag">
       <h3 class="skills-title">Customer Service</h3>
       <p class="skills-description">With a lifetime of customer service under my belt, I am able to help clients feel appreciated and let them know that I care about their needs being met.</p>
     </div>
   </div>
 
-  <div class="skills-icon-container">
-    <div class="skill-group icon-group1-animate">
+  <div 
+    class="skills-icon-container" 
+    data-aos="fade-up"
+    data-aos-offset="175"
+    data-aos-duration=".8"
+    data-aos-easing="ease-in-out"
+  >
+    <div class="skill-group">
       <div class="skill-icon">
         <label>Javascript</label>
         <i class="devicon-javascript-plain"></i>
@@ -108,7 +133,7 @@
         <i class="devicon-bulma-plain"></i>
       </div>
     </div>
-    <div class="skill-group icon-group2-animate">
+    <div class="skill-group">
       <div class="skill-icon">
         <label>Node.js</label>
         <i class="devicon-nodejs-plain"></i>
@@ -137,15 +162,21 @@
   </div>
 
   <div id="projects" class="projects-container">
-    <div class="project-wrapper">
-      <div class="project-content project1-content-animate">
+    <div 
+      class="project-wrapper"
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
+      <div class="project-content">
         <h5 class="project-number">Project 1</h5>
         <h4 class="project-name">CocktailHour</h4>
         <p class="project-description">An app for users to search for different cocktails within TheCocktailDB API database in addition to viewing the step by step recipe allowing the user the ability to create that cocktail on their own.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">React, React-Router, Styled Components, TheCocktailDB API, Axios, Material UI </p>
       </div>
-      <div class="project-thumb-container project1-thumb-animate">
+      <div class="project-thumb-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/sj60MN6x35Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="project-links-container">
           <a href="https://cocktailhour.netlify.app" target="_blank" class="project-links live-site">View Site</a>
@@ -154,15 +185,21 @@
       </div>
     </div>
 
-    <div class="project-wrapper">
-      <div class="project-content  project2-content-animate">
+    <div 
+      class="project-wrapper"
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
+      <div class="project-content">
         <h5 class="project-number">Project 2</h5>
         <h4 class="project-name">weatherSquad</h4>
         <p class="project-description">A weather app that lets you search current weather conditions. You also get a quote reflecting your locations weather. In addition, if the weather is dreary, you are provied with a joke to cheer you up.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">JavaScript, HTML, and CSS</p>
       </div>
-      <div class="project-thumb-container project2-thumb-animate">
+      <div class="project-thumb-container">
         <img class="project-thumb" src="images/weathersquad.png" alt="weathersquad">
         <div class="project-links-container">
           <a href="https://weathersquad.netlify.app" target="_blank" class="project-links live-site">View Site</a>
@@ -171,15 +208,21 @@
       </div>
     </div>
 
-    <div class="project-wrapper">
-      <div class="project-content  project3-content-animate">
+    <div 
+      class="project-wrapper"
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
+      <div class="project-content">
         <h5 class="project-number">Project 3</h5>
         <h4 class="project-name">squadTube</h4>
         <p class="project-description">Search for and watch your favorite videos using the Youtube API, bookmark favorite videos, tag videos based on the topic, search the local databases based on the tags. Includes authentication for login/logout.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">Node.js, Express, PostgreSQL, HTML, CSS, Express Template Engine, Express Session, Pg-promise, and bcrypt.</p>
       </div>
-      <div class="project-thumb-container project3-thumb-animate">
+      <div class="project-thumb-container">
         <img class="project-thumb" src="images/squadtube.png" alt="squadtube">
         <div class="project-links-container">
           <a href="https://squadtube.kurtisgarcia.dev" target="_blank" class="project-links live-site">View Site</a>
@@ -188,15 +231,21 @@
       </div>
     </div>
 
-    <div class="project-wrapper">
-      <div class="project-content project4-content-animate">
+    <div 
+      class="project-wrapper"
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
+      <div class="project-content">
         <h5 class="project-number">Project 4</h5>
         <h4 class="project-name">PuppyLuv</h4>
         <p class="project-description">An app for dog owners to coordinate puppy play dates, and connect with people who have dogs</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">React, Styled Components, Material UI, Bootstrap, Javascript, Express, PostgreSQL, ElephantSQL, Firebase, Auth0, Google API, </p>
       </div>
-      <div class="project-thumb-container project4-thumb-animate">
+      <div class="project-thumb-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Es1cn46QIIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="project-links-container">
           <a href="https://github.com/kgarcia14/puppyluv_frontend" target="_blank" class="project-links github-code">View Code</a>
@@ -204,15 +253,21 @@
       </div>
     </div>
 
-    <div class="project-wrapper">
-      <div class="project-content project5-content-animate">
+    <div 
+      class="project-wrapper"
+      data-aos="fade-up"
+      data-aos-offset="175"
+      data-aos-duration=".8"
+      data-aos-easing="ease-in-out"
+    >
+      <div class="project-content">
         <h5 class="project-number">Project 5</h5>
         <h4 class="project-name">How To Get Away</h4>
         <p class="project-description">Escape from the police in this python terminal game.</p>
         <h5 class="technologies-used">Techonolgies Used:</h5>
         <p class="technologies">Python</p>
       </div>
-      <div class="project-thumb-container project5-thumb-animate">
+      <div class="project-thumb-container">
         <img class="project-thumb" src="images/murder.png" alt="how to get away with murder python game">
         <div class="project-links-container">
           <a href="https://github.com/kgarcia14/the_keating_4" target="_blank" class="project-links github-code">View Code</a>
@@ -256,7 +311,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="index.js"></script>
 </html>
