--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Portfolio" />
-    <meta property="og:image" content="./images/portfolio_landing.png" />
+    <meta property="og:image" content="images/portfolio_landing.png" />
     <meta
-      property="og:portfolio"
-      content="My portfolio"
+      property="og:description"
+      content="Check out my work."
     />
-    <meta property="og:url" content="//www.portfolio.kurtisgarcia.dev" />
+    <meta property="og:url" content="https://portfolio.kurtisgarcia.dev" />
     <title>Kurtis' Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
