--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Portfolio" />
-    <meta property="og:image" content="https://portfolio.kurtisgarcia.dev/images/hero.png" />
+    <meta property="og:image" content="images/hero.png" />
     <meta
       property="og:description"
-      content="Description that will show in the preview"
+      content="Check out my work."
     />
     <meta property="og:url" content="https://portfolio.kurtisgarcia.dev/" />
     <title>Kurtis' Portfolio</title>
