--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://portfolio.kurtisgarcia.dev/" />
+    <meta property="og:site_name" content="Kurtis Garcia">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Portfolio" />
     <meta property="og:image" content="images/hero.png" />
-    <meta
-      property="og:description"
-      content="Check out my work."
-    />
-    <meta property="og:url" content="https://portfolio.kurtisgarcia.dev/" />
+    <meta property="og:description" content="Check out my work."/>
     <title>Kurtis' Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
