--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <a
           id="resume"
           class="resume"
-          href="resume/Kurtis Garcia Resume.pdf"
+          href="resume/Kurtis_Garcia_Resume.pdf"
           download
           >Download Resume</a
         >
