added screenshots for mobile and desktop, added chillclone

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:url" content="https://portfolio.kurtisgarcia.dev/" />
-    <meta property="og:site_name" content="Kurtis Garcia">
-    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Kurtis Garcia" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Portfolio" />
     <meta property="og:image" content="images/hero.png" />
-    <meta property="og:description" content="Check out my work."/>
+    <meta property="og:description" content="Check out my work." />
     <title>Kurtis' Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -189,14 +189,14 @@
       </div>
     </div>
 
-    <div
-      class="skills-icon-container"
-      data-aos="fade-up"
-      data-aos-offset="175"
-      data-aos-duration=".8"
-      data-aos-easing="ease-in-out"
-    >
-      <div class="skill-group">
+    <div class="skills-icon-container">
+      <div
+        class="skill-group"
+        data-aos="fade-up"
+        data-aos-offset="175"
+        data-aos-duration=".8"
+        data-aos-easing="ease-in-out"
+      >
         <div class="skill-icon">
           <label>Javascript</label>
           <i class="devicon-javascript-plain"></i>
@@ -222,7 +222,13 @@
           <i class="devicon-bulma-plain"></i>
         </div>
       </div>
-      <div class="skill-group">
+      <div
+        class="skill-group"
+        data-aos="fade-up"
+        data-aos-offset="175"
+        data-aos-duration=".8"
+        data-aos-easing="ease-in-out"
+      >
         <div class="skill-icon">
           <label>Node.js</label>
           <i class="devicon-nodejs-plain"></i>
@@ -285,13 +291,53 @@
           ></iframe>
           <div class="project-links-container">
             <a
-              href="https://cocktailhour.netlify.app"
+              href="https://cocktailhour.kurtisgarcia.dev"
               target="_blank"
               class="project-links live-site"
               >View Site</a
             >
             <a
               href="https://github.com/kgarcia14/cocktailhour"
+              target="_blank"
+              class="project-links github-code"
+              >View Code</a
+            >
+          </div>
+        </div>
+      </div>
+      <div
+        class="project-wrapper"
+        data-aos="fade-up"
+        data-aos-offset="175"
+        data-aos-duration=".8"
+        data-aos-easing="ease-in-out"
+      >
+        <div class="project-content">
+          <h5 class="project-number">Project 2</h5>
+          <h4 class="project-name">Chill Clone</h4>
+          <p class="project-description">
+            Allows users to browse different shows and movies based on what is currently trending, netflix originals, genres, etc. I tried to get as close to the Netflix UI as possible.
+          </p>
+          <h5 class="technologies-used">Techonolgies Used:</h5>
+          <p class="technologies">
+            React, TheMovieDB API, Axios
+          </p>
+        </div>
+        <div class="project-thumb-container">
+          <img
+            class="project-thumb"
+            src="images/chillclone_desktop_mobile.png"
+            alt="weathersquad"
+          />
+          <div class="project-links-container">
+            <a
+              href="https://chillclone.kurtisgarcia.dev"
+              target="_blank"
+              class="project-links live-site"
+              >View Site</a
+            >
+            <a
+              href="https://github.com/kgarcia14/netflix_clone"
               target="_blank"
               class="project-links github-code"
               >View Code</a
@@ -308,7 +354,7 @@
         data-aos-easing="ease-in-out"
       >
         <div class="project-content">
-          <h5 class="project-number">Project 2</h5>
+          <h5 class="project-number">Project 3</h5>
           <h4 class="project-name">weatherSquad</h4>
           <p class="project-description">
             A weather app that lets you search current weather conditions. You
@@ -321,7 +367,7 @@
         <div class="project-thumb-container">
           <img
             class="project-thumb"
-            src="images/weathersquad.png"
+            src="images/weatherSquad_desk_mobile.png"
             alt="weathersquad"
           />
           <div class="project-links-container">
@@ -349,7 +395,7 @@
         data-aos-easing="ease-in-out"
       >
         <div class="project-content">
-          <h5 class="project-number">Project 3</h5>
+          <h5 class="project-number">Project 4</h5>
           <h4 class="project-name">squadTube</h4>
           <p class="project-description">
             Search for and watch your favorite videos using the Youtube API,
@@ -366,7 +412,7 @@
         <div class="project-thumb-container">
           <img
             class="project-thumb"
-            src="images/squadtube.png"
+            src="images/squadTube_desk_mobile.png"
             alt="squadtube"
           />
           <div class="project-links-container">
@@ -394,7 +440,7 @@
         data-aos-easing="ease-in-out"
       >
         <div class="project-content">
-          <h5 class="project-number">Project 4</h5>
+          <h5 class="project-number">Project 5</h5>
           <h4 class="project-name">PuppyLuv</h4>
           <p class="project-description">
             An app for dog owners to coordinate puppy play dates, and connect
@@ -435,7 +481,7 @@
         data-aos-easing="ease-in-out"
       >
         <div class="project-content">
-          <h5 class="project-number">Project 5</h5>
+          <h5 class="project-number">Project 6</h5>
           <h4 class="project-name">How To Get Away</h4>
           <p class="project-description">
             Escape from the police in this python terminal game.
