took away offcanvas backdrop for screns larger than 768

--- a/index.html
+++ b/index.html
@@ -316,12 +316,12 @@
           <h5 class="project-number">Project 2</h5>
           <h4 class="project-name">Chill Clone</h4>
           <p class="project-description">
-            Allows users to browse different shows and movies based on what is currently trending, netflix originals, genres, etc. I tried to get as close to the Netflix UI as possible.
+            Allows users to browse different shows and movies based on what is
+            currently trending, netflix originals, genres, etc. I tried to get
+            as close to the Netflix UI as possible.
           </p>
           <h5 class="technologies-used">Techonolgies Used:</h5>
-          <p class="technologies">
-            React, TheMovieDB API, Axios
-          </p>
+          <p class="technologies">React, TheMovieDB API, Axios</p>
         </div>
         <div class="project-thumb-container">
           <img
