fixed desktop nav

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
               aria-label="Close"
             ></button>
           </div>
+          <div class="desk-nav-container">
+            <ul class="desk-nav-wrapper">
+              <li><a class="desk-nav-item" href="#">Home</li>
+              <li><a class="desk-nav-item" href="#skills">Skills</li>
+              <li><a class="desk-nav-item" href="#projects">projects</li>
+              <li><a class="desk-nav-item" href="#contact">Contact</li>
+            </ul>
+          </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
@@ -100,6 +108,7 @@
                 >
               </li>
             </ul>
+            
           </div>
         </div>
       </div>
