--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
         <a class="hero-btn-text" href="#projects">See my work</a>
       </button>
     </div>
-    <img class="bezier" src="images/bezier-dark.png" alt="">
+    <!-- <img class="bezier" src="images/bezier-dark.png" alt=""> -->
     <div id="skills" class="skills-container">
+      <div class="custom-shape-divider-top-1634357081">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+        </svg>
+      </div>
       <div
         class="skill-wrapper web-dev"
         data-aos="fade-up"
