--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta property="og:image" content="images/hero.png" />
     <meta property="og:description" content="Check out my work." />
     <title>Kurtis' Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -26,26 +29,37 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body class="has-navbar-fixed-top">
-    <nav data-scroll-header class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav
+      data-scroll-header
+      class="navbar is-fixed-top"
+      role="navigation"
+      aria-label="main navigation"
+    >
       <div class="navbar-brand">
-          <a class="logo" href="/">Kurtis Garcia</a>
+        <a class="logo" href="/">Kurtis Garcia</a>
 
-          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-          </a>
+        <a
+          role="button"
+          class="navbar-burger"
+          aria-label="menu"
+          aria-expanded="false"
+          data-target="navbarBasicExample"
+        >
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
       </div>
 
       <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start">
-              <a class="navbar-item" href="#">Home</a>
-              <a class="navbar-item services"href="#skills">Skills</a>
-              <a class="navbar-item products"href="#projects">Projects</a>
-              <a class="navbar-item contact" href="#contact">Contact</a>
-          </div>
+        <div class="navbar-start">
+          <a class="navbar-item" href="#">Home</a>
+          <a class="navbar-item services" href="#skills">Skills</a>
+          <a class="navbar-item products" href="#projects">Projects</a>
+          <a class="navbar-item contact" href="#contact">Contact</a>
+        </div>
       </div>
-  </nav>
+    </nav>
 
     <div class="social-nav">
       <ul class="social-list">
@@ -69,17 +83,28 @@
 
     <div class="hero">
       <div class="hero-content">
-        <h1>I <span class="purple-span">design</span> and <span class="purple-span">develop</span> websites and apps that simplify the user experience.</h1>
+        <h1>
+          I <span class="purple-span">design</span> and
+          <span class="purple-span">develop</span> websites and apps that
+          simplify the user experience.
+        </h1>
       </div>
       <button class="hero-btn" type="button">
         <a class="hero-btn-text" href="#projects">See my work</a>
       </button>
     </div>
-    <!-- <img class="bezier" src="images/bezier-dark.png" alt=""> -->
     <div id="skills" class="skills-container">
-      <div class="custom-shape-divider-top-1634357081">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+      <div class="custom-shape-divider-top-1634358060">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M1200 120L0 16.48 0 0 1200 0 1200 120z"
+            class="shape-fill"
+          ></path>
         </svg>
       </div>
       <div
@@ -451,7 +476,7 @@
       </div>
     </div>
 
-    <img class="bezier" src="images/bezier-light.png" alt="">
+    <img class="bezier" src="images/bezier-light.png" alt="" />
     <div id="contact" class="footer">
       <form
         class="contact-form"
