--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </h1>
         </div>
         <button class="hero-btn" type="button">
-          <a class="hero-btn-text" href="#projects">See my work</a>
+          <a class="hero-btn-text" href="#projects">See My Work</a>
         </button>
       </div>
       <img class="bezier bezier-dark" src="images/bezier-dark.png" alt="">
