--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <img class="skills-img" src="images/coding.svg" alt="code tag" />
           <h3 class="skills-title">Web Development</h3>
           <p class="skills-description">
-            Well versed in modern day web development. I design and update
+            Well versed in modern day web development. I design and develop
             websites and online applications using various technologies and design
             tools.
           </p>
