removed puppyluv from portfolio

--- a/index.html
+++ b/index.html
@@ -348,10 +348,7 @@
         </div>
       </div>
 
-      <div
-        class="project-wrapper"
-        
-      >
+      <!-- <div class="project-wrapper">
         <div class="project-content">
           <h5 class="project-number">Project 5</h5>
           <h4 class="project-name">PuppyLuv</h4>
@@ -384,12 +381,9 @@
             >
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div
-        class="project-wrapper"
-        
-      >
+      <div class="project-wrapper">
         <div class="project-content">
           <h5 class="project-number">Project 6</h5>
           <h4 class="project-name">How To Get Away</h4>
